# ewf-rs

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  module.rs
currencies/: Cargo.toml
currencies/src/: lib.rs  module.rs
doc/: secret.md  version.md
secret/: Cargo.toml
secret/src/: lib.rs  module.rs  sql.rs
src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
