[package]
name = "ewf"
version = "0.1.0"
authors = ["malefo.yun <784479660@qq.com>"]
edition = "2018"

[dependencies]
#wee_alloc 是一个比 Rust 二进制文件中通常使用的分配器还小得多的微型分配器。用这个分配器来替代默认的分配器将使 Wasm 文件体积更小，但会牺牲速度和内存开销。
#对比不包含默认分配器换取的体积大小，牺牲的速度和内存开销是微不足道的。较小的文件体积意味着你的页面将加载更快，因此通常建议使用此分配器而不是默认分配器，除非你的应用程序会执行一些繁重的内存分配任务。
wee_alloc = "0.4.5"
serde = {version  = "1.0.117",features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

utils = {path = "utils"}
secret = {path = "secret"}
common = {path = "common"}
currencies = {path = "currencies"}

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'


[workspace]
members = [
    "secret",
    "utils",
    "common",
    "currencies"
]

