[package]
name = "common"
version = "0.1.0"
authors = ["malefo.yun <784479660@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version  = "1.0.117",features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
wee_alloc = "0.4.5"