[package]
name = "currencies"
version = "0.1.0"
authors = ["malefo.yun <784479660@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
#序列化json工具
serde = {version  = "1.0.117",features = ["derive"]}
#chrono = "0.4.13"
#diesel = { version = "1.4.5", features = ["sqlite", "chrono", "r2d2"] }
hex = { version = "0.4", default-features = false }
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
kv-object = { git = "https://curdata-bots:SBf(TdV2yeBP@github.com/Curdata-project/KVObject" }
common-structure = { git = "https://curdata-bots:SBf(TdV2yeBP@github.com/Curdata-project/CommonStructure" }